Fix things broken on Flowdock design overhaul (v0.4)

--- a/flowdock-solarized-dark.css
+++ b/flowdock-solarized-dark.css
@@ -1,7 +1,6 @@
 @-moz-document url-prefix("https://www.flowdock.com") {
-
 /**
-* Flowdock Solarized Dark Grey v0.3 (2016-03-18)
+* Flowdock Solarized Dark Grey v0.4 (2017-10-18)
 *
 * https://userstyles.org/styles/125297/flowdock-solarized-dark-grey
 * https://github.com/ristomatti/flowdock-solarized-dark
@@ -9,9 +8,10 @@
 * The MIT License (MIT)
 * https://opensource.org/licenses/MIT
 *
-* (c) 2016 Ristomatti Airo <ristomatti@kallio.io>
+* (c) 2017 Ristomatti Airo <ristomatti@kallio.io>
 *
-* 
+*
+*
 * Solarized dark grey colors
 *
 *   background0  #141414
@@ -40,6 +40,64 @@
 *   cyan         #2aa198
 *   green        #859900
 */
+
+/* Fix stuff broken with Flowdock UI update */
+.compact #chat li[class*=message] .message-author {
+    color: #93a1a1;
+}
+
+.thread-content div.thread-comment.content {
+	margin-left: 25px;
+}
+
+.chat-message-list .chat-message.message {
+    padding-left: 38px;
+    padding-right: 0;
+}
+
+li.chat-message.message .content {
+	margin-right: 0;
+}
+
+.thread-comment-avatar,
+li.chat-message.message .avatar-container {
+	display: none;
+}
+
+li.chat-message.message .message-author,
+li.chat-message.message .msg-body {
+    color: #93a1a1 !important;
+ 	font-size: 15px !important;
+}
+
+li.inbox-message {
+    /*font-size: 12px !important;*/
+ 	background-color: #141414 !important;
+}
+
+.inbox-message .message-actions .icon-container {
+	background-color: #212121 !important;
+    color: #eee8d5 !important;
+}
+
+.thread-footer {
+ 	background-color: #141414;
+}
+
+.thread-activities,
+.help-message {
+	border-color: #212121 !important;
+}
+
+li.chat-message .tag.mention,
+li.chat-message .tag.mention.highlight {
+ 	border: 1px solid #212121;
+    background: #3a3a3a;
+}
+
+li.chat-message .tag.mention.highlight {
+    color: #eee8d5 !important;
+}
 
 /* Common background and text colors */
 .chat-message, .inbox-panel, #chat, .flow, #thread, #single {
@@ -313,5 +371,4 @@ li .input-button {
 ::-webkit-scrollbar-thumb:hover {
 	background: rgba(96, 96, 96, .6) !important;
 }
-
 }
